# internal/user/models/update_user_req.go
@@ -1,0 +1,7 @@
+package models
+
+type UpdateUserReq struct {
+	Name  *string `json:"name"`
+	Email *string `json:"email"`
+	// To Enforce Read-Only, The Group Is Purposefully Left Out.
+}
